feat: add builder methods to Collection and CollectionNewsletter entities